--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# jdbc properties
+# Note- using this spring automatically creates the DataSource and EntityManager(similar to SessionFactory) beans
+spring.datasource.url=jdbc:mysql://localhost:3306/petshop?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=629665
+
+# server port
 server.port=1010
+
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
