login bug resolved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # jdbc properties
 # Note- using this spring automatically creates the DataSource and EntityManager(similar to SessionFactory) beans
-spring.datasource.url=jdbc:mysql://localhost:3306/petshop?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/contacts?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=629665
 
