--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # jdbc properties
 # Note- using this spring automatically creates the DataSource and EntityManager(similar to SessionFactory) beans
-spring.datasource.url=jdbc:mysql://localhost:3306/contacts?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=629665
+spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6441828?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=sql6441828
+spring.datasource.password=6IH3P4HaAg
 
 # server port
 server.port=1010
