port changed, application now to fetch data from server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=sql6441828
 spring.datasource.password=6IH3P4HaAg
 
 # server port
-server.port=1010
+server.port=${PORT:1010}
 
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
