--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,6 @@ spring.sql.init.mode=always
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=200KB
+spring.servlet.multipart.max-request-size=200KB
