database credentials hidden

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # jdbc properties
 # Note- using this spring automatically creates the DataSource and EntityManager(similar to SessionFactory) beans
 spring.datasource.url=jdbc:mysql://remotemysql.com:3306/9rS5DIBeK2?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=9rS5DIBeK2
-spring.datasource.password=DpnBvbt7tT
+spring.datasource.username=ENC(+nUSuG1mwaXVMpf48TUkf8TmWVOdYrFv)
+spring.datasource.password=ENC(MSz4xd6Yc6UDwbnWVXLq8QIzNUM63T+m)
 
 # server port
 server.port=${PORT:1010}
@@ -16,3 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=300KB
 spring.servlet.multipart.max-request-size=300KB
+
+jasypt.encryptor.password=SimplePassword
