--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>com.github.ulisesbocchio</groupId>
+    		<artifactId>jasypt-spring-boot-starter</artifactId>
+    		<version>2.0.0</version>
+		</dependency>
+<!-- Thanks for using https://jar-download.com -->
+		
 	</dependencies>
 
 	<build>
